--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'http://euphoricreveriesphotography.com'
 languageCode = 'en-us'
 title = 'Euphoric Reveries'
 theme = 'gallery'
